fixed issue when navbar is too long (#34)

--- a/hackathon_site/event/static/event/styles/scss/styles.scss
+++ b/hackathon_site/event/static/event/styles/scss/styles.scss
@@ -14,7 +14,7 @@ h6 {
 h1 {
     margin-top: 150px;
 
-    @include responsive(md-down) {
+    @include responsive(lg-down) {
         margin-top: 30px;
     }
 
@@ -60,7 +60,7 @@ strong {
 .logoNav {
     height: 200px;
     transition: height 200ms linear;
-    padding: 10px;
+    padding: 10px 0;
 
     &Scrolled {
         padding: 5px;
@@ -80,6 +80,11 @@ strong {
                 background-color: transparent !important;
             }
         }
+    }
+
+    @include responsive(lg-down) {
+        height: 64px;
+        padding: 5px;
     }
 
     @include responsive(md-down) {
